[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-grid-triage"
version = "0.1.0"
description = "Smart Grid Triage OpenEnv Simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "networkx",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
